[package]
name = "x-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
env_logger = "0.11.5"
eyre = "0.6.12"
fake_user_agent = "0.2.1"
log = "0.4.22"
rand = "0.8.5"
reqwest = { version = "0.12.8", features = ["cookies", "json"] }
reqwest_cookie_store = "0.8.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.41.0", features = ["full"] }
totp-rs = "5.6.0"
